최종수정본
